// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an article list header 1`] = `
.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  border-bottom-color: black;
  border-bottom-width: 0px;
  width: 100%;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-animation: eMLfYp 0.3s ease-in-out;
  animation: eMLfYp 0.3s ease-in-out;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c7 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  padding-top: 30px;
}

.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  color: #1D1D1B;
  font-family: "TimesModern-Bold";
  font-size: 30px;
}

.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  padding-left: 10px;
  padding-right: 10px;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100px;
}

.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

@media (min-width:768px) {
  .c0 {
    padding-top: 60px;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 45px;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-left: 0;
    padding-right: 0;
    max-width: 680px;
  }
}

@media (min-width:1320px) {
  .c6 {
    max-width: 760px;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 116px;
  }
}

<div
  alignItems="center"
  backgroundColor="#F9F9F9"
  borderBottomColor="#F0F0F0"
  borderBottomWidth={1}
  className="c0"
  flexDirection="column"
  paddingBottom="40px"
  width="100%"
>
  <div
    className="c1"
    width="100%"
  >
    <div
      alignItems="center"
      backgroundColor="transparent"
      className="c2"
      width="100%"
    >
      <div
        className="c3"
      >
        <Image
          borderColor="#FFFFFF"
          borderRadius={50}
          marginBottom="20px"
          marginLeft="auto"
          marginRight="auto"
          overflow="hidden"
          width={100}
        />
      </div>
      <h1
        className="c4"
      >
        Name
      </h1>
      <h2
        WebkitFontSmoothing="antialiased"
        className="c5"
        color="#696969"
        fontFamily="TimesDigitalW04-RegularSC"
        fontSize={14}
        lineHeight="14px"
        marginTop="5px"
      >
        job title
      </h2>
      <div
        alignItems="flex-end"
        className="c2"
        flexDirection="row"
        paddingBottom="10px"
        paddingTop="15px"
      >
        <div
          alignSelf="center"
          className="c2"
        >
          <IconTwitter />
        </div>
        <TextLink
          color="#006699"
          fontFamily="GillSansMTStd-Medium"
          fontSize={15}
          lineHeight={17}
          paddingLeft="5px"
          textDecorationLine="none"
        >
          @
          twitter
        </TextLink>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
          color="#333333"
          fontFamily="TimesDigitalW04"
          fontSize={16}
          lineHeight="27px"
          textAlign="center"
        >
          Camilla Long
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. an article list header loading 1`] = `
.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  padding-top: 30px;
}

@media (min-width:768px) {
  .c0 {
    padding-top: 60px;
  }
}

<div
  alignItems="center"
  backgroundColor="#F9F9F9"
  borderBottomColor="#F0F0F0"
  borderBottomWidth={1}
  className="c0"
  flexDirection="column"
  paddingBottom="40px"
  width="100%"
>
  <div
    alignItems="center"
    backgroundColor="#F9F9F9"
    borderBottomColor="#F0F0F0"
    borderBottomWidth={1}
    className="c1"
    minHeight={264}
    width="100%"
  >
    <div
      borderColor="#FFFFFF"
      borderRadius={50}
      className="c1"
      height={100}
      overflow="hidden"
      position="absolute"
      top="30px"
      width={100}
    >
      <Gradient
        flex={1}
      />
    </div>
  </div>
</div>
`;
